--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,47 @@
 :host {
     display: block;
     background: darkblue;
-    width: 13%;
+    width: 15%;
     height: 100vh;
+}
+.navbar-brand {
+    display: block;
+    margin: 10px auto;
+    width: 80%;
+    text-align: center;
+}
+.navbar-brand span {
+    border-radius: 50%;
+}
+
+.navbar-brand span img {
+    border: 4px solid rgba(0, 0, 0, 0.253);
+    border-radius: 50%;
+    width: 100%;
+}
+.navbar-brand p {
+    margin-top: 10px;
+    color: white;
+    font-size: 1.5rem;
+}
+.navbar {
+    display: block;
+    margin: 50px auto 0 auto;
+    width: 80%;
+    text-align: center;
+}
+
+.navbar ul li{
+    padding: 15px 10px;
+}
+
+.socials {
+    display: flex;
+    width: 80%;
+    margin: 40px auto 0 auto;
+}
+
+.socials li a img {
+    width: 30px;
+    margin: 0 5px;
 }
