--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,8 +15,8 @@
     </ul>
 </nav>
 <ul class="socials">
-    <li><a href="#"><img src="assets/images/github.png" alt="GitHub"></a></li>
-    <li><a href="#"><img src="assets/images/instagram.png" alt="Instagram"></a></li>
-    <li><a href="#"><img src="assets/images/linkedin.png" alt="LinkedIn"></a></li>
-    <li><a href="#"><img src="assets/images/logotipos.png" alt="Logotipos"></a></li>
+    <li><a href="#"><img src="assets/images/socials/github.png" alt="GitHub"></a></li>
+    <li><a href="#"><img src="assets/images/socials/instagram.png" alt="Instagram"></a></li>
+    <li><a href="#"><img src="assets/images/socials/linkedin.png" alt="LinkedIn"></a></li>
+    <li><a href="#"><img src="assets/images/socials/logotipos.png" alt="Logotipos"></a></li>
 </ul>
