--- a/src/app/main/components/left/left.component.css
+++ b/src/app/main/components/left/left.component.css
@@ -1,25 +1,62 @@
 :host {
-    display: block;
+    display: flex;
     background-color: darkcyan;
     width: 50%;
-    height: 100vh;
+    height: 100%;
+    justify-content: center;
 }
 .about-me {
     padding: 20px;
     color: white; /* Mejor contraste sobre darkcyan */
+    margin: auto;
 }
 
-.about-me h2, .about-me h3 {
-    margin-top: 0;
+.about-me h2 {
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 24px;
+}
+.about-me p{
+    text-align: center;
+    line-height: 1.7;
+}
+.about-me h3{
+    margin-top: 40px;
+    text-align: center;
 }
 
 .about-me ul {
     list-style: none;
     padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .about-me ul li {
-    background: rgba(255, 255, 255, 0.1); /* Fondo transparente */
-    padding: 10px;
-    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 15%;
+}
+.tecnologies-item{
+    position: relative;
+    height: 85px;
+    overflow: hidden;
+    transition: transform .3s ease;
+}
+.tecnologies-item:hover{
+    transform: scale(1.5);
+    z-index: 9;
+}
+
+.tecnologies-item img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    object-fit: cover; 
+    object-position: center; 
+    transform: translate(-50%, -50%);
 }
