--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -18,6 +18,7 @@
     border: 4px solid rgba(0, 0, 0, 0.253);
     border-radius: 50%;
     width: 100%;
+    box-shadow: 0 4px 8px rgb(0, 0, 0);
 }
 .navbar-brand p {
     margin-top: 10px;
@@ -26,7 +27,7 @@
 }
 .navbar {
     display: block;
-    margin: 50px auto 0 auto;
+    margin: 40px auto 20px auto;
     width: 80%;
     text-align: center;
 }
@@ -38,10 +39,11 @@
 .socials {
     display: flex;
     width: 80%;
-    margin: 40px auto 0 auto;
+    margin: 50px auto 0 auto;
+    justify-content: center;
 }
 
 .socials li a img {
-    width: 30px;
+    width: 25px;
     margin: 0 5px;
 }
