--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,5 +3,13 @@
     display: flex;
     flex-direction: row;
     height: 100vh;
-    background: black;
+    background-color: rgba(0, 0, 0, 0.048);
+}
+#bg-video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
 }
