--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<video autoplay muted loop id="bg-video">
+    <source [src]="'assets/videos/videoplayback.mp4'" type="video/mp4">
+    Tu navegador no soporta la etiqueta de video.
+</video>
 <app-navbar></app-navbar>
 <app-main></app-main>
 <router-outlet></router-outlet>
