--- a/src/app/main/components/left/left.component.css
+++ b/src/app/main/components/left/left.component.css
@@ -1,6 +1,6 @@
 :host {
     display: flex;
-    background-color: darkcyan;
+    background-color: rgba(0, 0, 0, 0.048);
     width: 50%;
     height: 100%;
     justify-content: center;
@@ -17,6 +17,7 @@
     font-size: 24px;
 }
 .about-me p{
+    padding: 0 20px;
     text-align: center;
     line-height: 1.7;
 }
@@ -39,6 +40,10 @@
     margin-left: 10px;
     margin-right: 10px;
     width: 15%;
+}
+.title {
+    text-align: center;
+    margin-bottom: 20px;
 }
 .tecnologies-item{
     position: relative;
