--- a/src/app/main/components/right/right.component.html
+++ b/src/app/main/components/right/right.component.html
@@ -1,1 +1,10 @@
-<p>right works!</p>
+<h3 class="title">Mis Trabajos</h3>
+<div class="projects">
+    <a *ngFor="let project of projects" class="project">
+        <img src={{project.img}}>
+        <div class="project-info">    
+            <h3>{{project.title}}</h3>
+            <p>{{project.description}}</p>
+        </div>
+    </a>
+</div>
