adding more views and about-me section skeleton

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,42 @@
-<p>about works!</p>
+<h1>About me</h1>
+<p>¡Hola! Soy Angel Gaitan, un Desarrollador Web Full Stack dedicado y apasionado con una sólida formación en tecnologías tanto frontend como backend. Desde que era niño, me ha fascinado el funcionamiento interno de los videojuegos, lo que despertó mi interés por la programación y la tecnología.
+Soy conocido por mi tenacidad y habilidades para resolver problemas. Disfruto enfrentándome a desafíos complejos y encontrando soluciones eficientes. Mi enfoque hacia los proyectos es sistemático y organizado, asegurando que cada tarea se complete con precisión y atención al detalle. Creo en el poder del trabajo en equipo y me esfuerzo por crear un ambiente colaborativo y de apoyo en cada equipo del que formo parte.</p>
+<div class="skills">
+    <h2>Skills</h2>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+    <div class="skills-info">
+        <p>Angular</p>
+        <span><p></p></span>
+    </div>
+</div>
