--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,11 +6,21 @@
 </a>
 <nav class="navbar">
     <ul>
-        <li>Home</li>
-        <li>About Me</li>
-        <li>What I Do</li>
-        <li>Resume</li>
-        <li>Contact</li>
+        <li>
+            <a routerLink="index" routerLinkActive="activeNav">Home</a>
+        </li>
+        <li>
+            <a routerLink="about" routerLinkActive="activeNav">About Me</a>
+        </li>
+        <li>
+            <a routerLink="what-i-do" routerLinkActive="activeNav">What I Do</a>
+        </li>
+        <li>
+            <a routerLink="works" routerLinkActive="activeNav">Works</a>
+        </li>
+        <li>
+            <a routerLink="contact" routerLinkActive="activeNav">Contact</a>
+        </li>
     </ul>
 </nav>
 <ul class="socials">
@@ -19,3 +29,4 @@
     <li><a href="#"><img src="assets/images/socials/linkedin.png" alt="LinkedIn"></a></li>
     <li><a href="#"><img src="assets/images/socials/logotipos.png" alt="Logotipos"></a></li>
 </ul>
+
