--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -35,7 +35,11 @@
 
 .navbar ul li{
     color: white;
-    padding: 15px 10px;
+    padding: 15px 0;
+}
+.navbar ul li a{
+    transition: .1s ease-in-out;
+
 }
 
 .socials {
@@ -48,4 +52,7 @@
 .socials li a img {
     width: 25px;
     margin: 0 5px;
+}
+.activeNav {
+    border-bottom: 3px solid white;
 }
