--- a/src/app/not-found-page/not-found-page.component.css
+++ b/src/app/not-found-page/not-found-page.component.css
@@ -3,6 +3,11 @@
     height: 100vh;
     width: 87%;
     background-color: rgba(0, 0, 0, 0.048);
-    transition: .5s ease;
 }
 
+p {
+    color: white;
+    font-size: 2rem;
+    margin: auto;
+    text-align: center;
+}
