--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,27 @@
-<p>contact works!</p>
+<h1>Contactame</h1>
+<div class="contact">
+    <div class="info">
+        <h2>Adress</h2>
+        <div class="street">
+            <p>Direcciones</p>
+            <p>Direcciones</p>
+        </div>
+        <div class="contacts">
+            <div class="item">
+                <img src="https://cdn-icons-png.flaticon.com/512/1493/1493169.png">
+                <p>41938492388</p>
+            </div>
+        </div>
+    </div>
+    <div class="form">
+        <h2>Enviame un mensaje</h2>
+        <form>
+            <div class="inputs">
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <textarea name="" id="" placeholder="Dime que necesitas"></textarea>
+            <button>Enviar</button>
+        </form>
+    </div>
+</div>
