--- a/src/app/wid/wid.component.css
+++ b/src/app/wid/wid.component.css
@@ -1,8 +1,39 @@
 :host {
     display: flex;
+    flex-direction: column;
     height: 100vh;
-    width: 87%;
+    width: 85%;
     background-color: rgba(0, 0, 0, 0.048);
     transition: .5s ease;
+    color: white;
+    text-align: center;
+    padding: 20px 120px;
+}
+h1{
+    margin: 50px 0 60px 0;
+    font-size:xx-large;
+}
+.container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
+.item {
+    width: 100px;
+    display: flex;
+    margin: 0 40px;
+}
+
+.item img{
+ width: 100%;
+}
+
+.text h2{
+    font-size: larger;
+}
+.text p{
+    font-size: small;
+}
