--- a/src/app/wid/wid.component.html
+++ b/src/app/wid/wid.component.html
@@ -1,1 +1,22 @@
-<p>wid works!</p>
+<h1>Que hago?</h1>
+<div class="container">
+    <div class="item">
+        <img src="https://cdn-icons-png.flaticon.com/512/1493/1493169.png">
+        <div class="text">
+            <h2>Api rest</h2>
+            <p>Api rest ndsadjsakndjsakndsank</p>
+        </div>
+        <div class="item">
+            <img src="https://cdn-icons-png.flaticon.com/512/1493/1493169.png">
+            <div class="text">
+                <h2>Api rest</h2>
+                <p>Api rest ndsadjsakndjsakndsank</p>
+            </div>
+        <div class="item">
+        <img src="https://cdn-icons-png.flaticon.com/512/1493/1493169.png">
+        <div class="text">
+            <h2>Api rest</h2>
+            <p>Api rest ndsadjsakndjsakndsank</p>
+        </div>
+    </div>
+</div>
