Created a object 'info' containing necessary information for populating various HTML elements.

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -35,10 +35,11 @@ p {
     flex-direction: column;
     align-items: center;
     margin: 10px;
+    font-size: 20px;
 }
 
 .skills-info div {
-    width: 100%;
+    width: 100px;
     height: 10px;
     background-color: white;
     border-radius: 20px;
