--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
     <source [src]="'assets/videos/videoplayback.mp4'" type="video/mp4">
     Tu navegador no soporta la etiqueta de video.
 </video>
-<app-navbar></app-navbar>
+<app-navbar [info]="info"></app-navbar>
+<button (click)="toggleLanguage()" style="position: absolute; top: 10px; right: 10px;">{{buttonName}}</button>
 <router-outlet></router-outlet>
