--- a/src/app/main/components/left/left.component.html
+++ b/src/app/main/components/left/left.component.html
@@ -1,6 +1,6 @@
 <div class="about-me">
-    <h2>Hola!, Soy Angel Gabriel</h2>
-    <p>Ayudo a mejorar visual y seguridad de proyectos asequibles. Especializado en código estructurado y profesional para garantizar estética y robustez. Éxitos incluyen diseño de bases de datos y APIs eficientes. Comprometido con tu visión tecnológica, superando desafíos con precisión y creatividad.</p>
+    <h2>{{info.home.greeting}}</h2>
+    <p>{{info.home.presentation}}</p>
     <h3 class="title">Tecnologies</h3>
     <ul class="technologies-list">
         <li *ngFor="let tecnology of tecnologies" class="tecnologies-item"><img [src]="'assets/images/tecnologies/' + tecnology + '.png'" alt="{{ tecnology }}">
