--- a/src/app/main/components/right/right.component.html
+++ b/src/app/main/components/right/right.component.html
@@ -1,9 +1,9 @@
-<h3 class="title">Mis Trabajos</h3>
+<h3 class="title">{{info.projectsTitle}}</h3>
 <div class="projects">
-    <a *ngFor="let project of projects" class="project">
-        <img src={{project.img}}>
+    <a *ngFor="let project of info.projects" class="project">
+        <img src={{project.image}}>
         <div class="project-info">    
-            <h3>{{project.title}}</h3>
+            <h3>{{project.name}}</h3>
             <p>{{project.description}}</p>
         </div>
     </a>
