--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,19 +7,19 @@
 <nav class="navbar">
     <ul>
         <li>
-            <a routerLink="index" routerLinkActive="activeNav">Home</a>
+            <a routerLink="index" routerLinkActive="activeNav">{{info.navbar.home}}</a>
         </li>
         <li>
-            <a routerLink="about" routerLinkActive="activeNav">About Me</a>
+            <a routerLink="about" routerLinkActive="activeNav">{{info.navbar.about}}</a>
         </li>
         <li>
-            <a routerLink="what-i-do" routerLinkActive="activeNav">What I Do</a>
+            <a routerLink="what-i-do" routerLinkActive="activeNav">{{info.navbar.what_i_do}}</a>
         </li>
         <li>
-            <a routerLink="works" routerLinkActive="activeNav">Works</a>
+            <a routerLink="works" routerLinkActive="activeNav">{{info.navbar.projects}}</a>
         </li>
         <li>
-            <a routerLink="contact" routerLinkActive="activeNav">Contact</a>
+            <a routerLink="contact" routerLinkActive="activeNav">{{info.navbar.contact}}</a>
         </li>
     </ul>
 </nav>
