--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -39,11 +39,13 @@ p {
 }
 
 .skills-info div {
-    width: 100px;
-    height: 10px;
+    width: 120px;
+    height: 15px;
     background-color: white;
     border-radius: 20px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .skills-info div span {
