--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,26 +1,25 @@
-<h1>Contactame</h1>
+<h1>{{info.contact.title}}</h1>
 <div class="contact">
     <div class="info">
-        <h2>Adress</h2>
+        <h2>{{info.contact.address.title}}</h2>
         <div class="street">
-            <p>Direcciones</p>
-            <p>Direcciones</p>
+            <p>{{info.contact.address.description}}</p>
         </div>
         <div class="contacts">
             <div class="item">
                 <img src="https://cdn-icons-png.flaticon.com/512/1493/1493169.png">
-                <p>41938492388</p>
+                <p>{{info.contact.phone.number}}</p>
             </div>
         </div>
     </div>
     <div class="form">
-        <h2>Enviame un mensaje</h2>
+        <h2>{{info.contact.form.title}}</h2>
         <form>
             <div class="inputs">
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
+                <input type="text" placeholder="{{info.contact.form.name}}">
+                <input type="email" placeholder="{{info.contact.form.email}}">
             </div>
-            <textarea name="" id="" placeholder="Dime que necesitas"></textarea>
+            <textarea name="" id="" placeholder="{{info.contact.form.textarea}}"></textarea>
             <button>Enviar</button>
         </form>
     </div>
