--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,11 +3,12 @@
     <div class="info">
         <h2>{{info.contact.address.title}}</h2>
         <div class="street">
+            <img src="https://img.icons8.com/ios-filled/100/FFFFFF/marker.png">
             <p>{{info.contact.address.description}}</p>
         </div>
         <div class="contacts">
             <div class="item">
-                <img src="https://cdn-icons-png.flaticon.com/512/1493/1493169.png">
+                <img src="https://img.icons8.com/ios-filled/100/FFFFFF/phone.png">
                 <p>{{info.contact.phone.number}}</p>
             </div>
         </div>
