--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,4 @@
 :host {
-    display: block;
     backdrop-filter: blur(10px);
     width: 15%;
     height: 100vh;
@@ -47,6 +46,10 @@
     width: 80%;
     margin: 50px auto 0 auto;
     justify-content: center;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .socials li a img {
