--- a/src/app/main/components/right/right.component.html
+++ b/src/app/main/components/right/right.component.html
@@ -1,10 +1,12 @@
 <h3 class="title">{{info.projectsTitle}}</h3>
 <div class="projects">
-    <a *ngFor="let project of info.projects" class="project">
-        <img src={{project.image}}>
-        <div class="project-info">    
+    <div *ngFor="let project of info.projects" class="project" (click)="expandProject($event)">
+        <img src="{{project.image}}" alt="{{project.name}}">
+        <div class="project-info">
             <h3>{{project.name}}</h3>
-            <p>{{project.description}}</p>
+            <p>{{project.description}}
+                <a [routerLink]="['/works', project.name]">View Details</a>
+            </p>
         </div>
-    </a>
+    </div>
 </div>
