--- a/src/app/works/works.component.css
+++ b/src/app/works/works.component.css
@@ -4,5 +4,122 @@
     width: 85%;
     background-color: rgba(0, 0, 0, 0.048);
     transition: .5s ease;
+    font-size: 20px;
+    color: white;
 }
 
+.projects {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    padding: 0 40px;
+    margin: 0 auto;
+}
+
+.project {
+    box-shadow: 0 0 10px black;
+    cursor: pointer;
+    width: 300px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: .3s ease;
+}
+
+.project:hover {
+    box-shadow: 0 0 10px #E0E0E0;
+}
+
+.project-info {
+    height: 100%;
+}
+
+.project-info img {
+    object-fit: cover;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.project.expanded .project-info {
+    transform: scale(1);
+}
+
+button {
+    margin: 10px 0;
+    color: white;
+    background-color: transparent;
+    border: 1px solid transparent;
+    transition: .3s ease;
+    padding: 5px;
+    cursor: pointer;
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+}
+
+button:hover {
+    border-radius: 10px;
+    border: 1px solid white;
+    box-shadow: #E0E0E0 0 0 10px;
+}
+
+/* DENTRO DE UN PROYECTO */
+.projectSelected {
+    position: relative;
+    display: flex;
+}
+
+.projectSelected .project-info {
+    height: 500px;
+    margin: auto 0;
+    width: 50%;
+    padding: 0 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.projectSelected .project-image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 500px;
+    margin: auto 0;
+    width: 50%;
+    padding: 0 20px;
+}
+
+.projectSelected .project-info h2 {
+    margin: 10px;
+}
+
+.projectSelected .project-info p {
+    margin: 20px 20px;
+}
+
+.projectSelected .project-info .links a {
+    margin: 0 10px;
+}
+
+.projectSelected .project-info .links a:hover {
+    text-shadow: #E0E0E0 0 0 10px;
+}
+
+.projectSelected .project-image img {
+    display: block;
+    max-width: 100%;
+    width: 600px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: .5s ease;
+    cursor: pointer;
+    box-shadow: 0 0 10px black;
+}
+
+.projectSelected .project-image img:hover {
+    box-shadow: 0 0 10px #E0E0E0;
+}
