media query 1200width

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,2 @@
-<app-left [info]="info"></app-left>
-<app-right [info]="info"></app-right>
+<app-left [info]="info" class="left"></app-left>
+<app-right [info]="info" class="right"></app-right>
