--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,8 +1,6 @@
 :host {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 85%;
     background-color: rgba(0, 0, 0, 0.048);
     color: white;
     text-align: center;
@@ -30,6 +28,7 @@ p {
     justify-content: space-around;
     justify-content: center;
 }
+
 .skills-info {
     display: flex;
     flex-direction: column;
@@ -55,3 +54,5 @@ p {
     width: 75%;
     background-color: green;
 }
+
+@media screen and (max-width: 1200px) {}
