--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,3 +33,29 @@ button:hover {
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.397);
   border: 1px solid white;
 }
+
+.navbar {
+  width: 15%;
+}
+
+.container {
+  width: 85%;
+  height: 100vh;
+}
+
+@media screen and (max-width: 1200px) {
+  :host {
+    flex-direction: column;
+  }
+
+  .navbar {
+    width: 100%;
+    height: 10%;
+  }
+
+  .container {
+    width: 100%;
+    height: auto;
+  }
+
+}
