--- a/src/app/main/components/left/left.component.css
+++ b/src/app/main/components/left/left.component.css
@@ -1,10 +1,9 @@
 :host {
     display: flex;
     background-color: rgba(0, 0, 0, 0.048);
-    width: 50%;
-    height: 100%;
     justify-content: center;
 }
+
 .about-me {
     padding: 20px;
     color: white;
@@ -16,12 +15,14 @@
     text-align: center;
     font-size: 24px;
 }
-.about-me p{
+
+.about-me p {
     padding: 0 15px;
     text-align: center;
     line-height: 1.7;
 }
-.about-me h3{
+
+.about-me h3 {
     margin-top: 40px;
     text-align: center;
 }
@@ -41,30 +42,40 @@
     margin-right: 10px;
     width: 15%;
 }
+
 .title {
     text-align: center;
     margin-bottom: 20px;
 }
-.tecnologies-item{
+
+.tecnologies-item {
     position: relative;
     height: 85px;
     overflow: hidden;
     transition: transform .3s ease;
 }
-.tecnologies-item:hover{
+
+.tecnologies-item:hover {
     transform: scale(1.5);
     z-index: 9;
 }
 
-.tecnologies-item img{
+.tecnologies-item img {
     border-radius: 10px;
-
-
     position: absolute;
     top: 50%;
     left: 50%;
     width: 100%;
-    object-fit: cover; 
-    object-position: center; 
+    object-fit: cover;
+    object-position: center;
     transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 1200px) {
+    .about-me ul li {
+        margin-top: 5px;
+        margin-left: 10px;
+        margin-right: 10px;
+        width: 70px;
+    }
 }
