--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,7 +1,24 @@
 :host {
     display: flex;
-    height: 100vh;
-    width: 85%;
     background-color: rgba(0, 0, 0, 0.048);
 }
 
+.right {
+    width: 50%;
+    height: 100%;
+}
+
+.left {
+    width: 50%;
+    height: 100%;
+}
+
+@media screen and (max-width: 1200px) {
+    .left {
+        width: 70%;
+    }
+
+    .right {
+        width: 30%;
+    }
+}
