--- a/src/app/works/works.component.css
+++ b/src/app/works/works.component.css
@@ -1,7 +1,5 @@
 :host {
     display: flex;
-    height: 100vh;
-    width: 85%;
     background-color: rgba(0, 0, 0, 0.048);
     transition: .5s ease;
     font-size: 20px;
@@ -15,6 +13,7 @@
     flex-wrap: wrap;
     padding: 0 40px;
     margin: 0 auto;
+    margin-top: 40px;
 }
 
 .project {
