mediaquery for 915px width

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     Tu navegador no soporta la etiqueta de video.
 </video>
 <app-navbar [info]="info" class="navbar"></app-navbar>
-<button (click)="toggleLanguage()" style="position: absolute; top: 13px; right: 10px;">{{buttonName}}</button>
+<button (click)="toggleLanguage()" style="position: fixed; top: 13px; right: 10px;">{{buttonName}}</button>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
