--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,5 +13,5 @@
             </div>
         </div>
     </div>
-    <app-form-contact [info]="info"></app-form-contact>
+    <app-form-contact [info]="info" class="form"></app-form-contact>
 </div>
