--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.048);
+
 }
 
 #bg-video {
@@ -51,11 +52,13 @@ button:hover {
   .navbar {
     width: 100%;
     height: 10%;
+    position: fixed;
   }
 
   .container {
     width: 100%;
     height: auto;
+    margin-top: 64px;
   }
 
 }
