--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -22,3 +22,15 @@
         width: 30%;
     }
 }
+
+@media screen and (max-width: 915px) {
+    :host {
+        flex-direction: column;
+    }
+
+    .left,
+    .right {
+        width: 100%;
+    }
+
+}
