--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,7 +20,7 @@
 
 button {
   padding: 10px 15px;
-  background-color: rgba(25, 25, 112, 0.37);
+  background-color: rgba(255, 255, 255, 0.1);
   color: white;
   border-radius: 10px;
   transition: .4s ease;
@@ -51,7 +51,7 @@ button:hover {
 
   .navbar {
     width: 100%;
-    height: 10%;
+    height: 64px;
     position: fixed;
   }
 
