--- a/src/app/contact/components/form-contact/form-contact.component.css
+++ b/src/app/contact/components/form-contact/form-contact.component.css
@@ -1,22 +1,26 @@
 .form {
-    padding: 0 40px; 
-    width: 600px;  
+    padding: 0 40px;
+    width: 600px;
 }
+
 .form h2 {
     text-align: start;
     margin-left: 20px;
     margin-bottom: 20px;
     font-size: x-large;
 }
+
 .inputs {
     display: flex;
     gap: 20px;
 }
+
 .input-group {
     display: flex;
     flex-direction: column;
     flex: 1;
 }
+
 .input-group input {
     background-color: rgba(0, 0, 0, 0.301);
     padding: 8px;
@@ -25,11 +29,13 @@
     color: white;
     width: 100%;
 }
+
 .textarea-group {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
 }
+
 .textarea-group textarea {
     width: 100%;
     border-radius: 10px;
@@ -40,11 +46,13 @@
     color: white;
     resize: none;
 }
+
 .alert {
     color: red;
     font-size: 0.9em;
     margin-top: 5px;
 }
+
 button {
     margin-top: 20px;
     width: 100px;
@@ -60,4 +68,10 @@ button {
 button:hover {
     border: 1px solid white;
     box-shadow: inset 0 0 4px white;
+}
+
+@media screen and (max-width: 915px) {
+    .form {
+        width: 400px;
+    }
 }
