--- a/src/app/navbar/components/sandwich-menu/sandwich-menu.component.html
+++ b/src/app/navbar/components/sandwich-menu/sandwich-menu.component.html
@@ -1,9 +1,9 @@
-<div class="sandwich-menu">
+<nav class="sandwich-menu">
     <ul>
-        <li><a routerLink="index" routerLinkActive="activeNav">Home</a></li>
-        <li><a routerLink="about" routerLinkActive="activeNav">About</a></li>
-        <li><a routerLink="what-i-do" routerLinkActive="activeNav">What I do</a></li>
-        <li><a routerLink="works" routerLinkActive="activeNav">Projects</a></li>
-        <li><a routerLink="contact" routerLinkActive="activeNav">Contact</a></li>
+        <li><a routerLink="index" routerLinkActive="activeNav">{{ info.navbar.home }}</a></li>
+        <li><a routerLink="about" routerLinkActive="activeNav">{{ info.navbar.about }}</a></li>
+        <li><a routerLink="what-i-do" routerLinkActive="activeNav">{{ info.navbar.what_i_do }}</a></li>
+        <li><a routerLink="works" routerLinkActive="activeNav">{{ info.navbar.projects }}</a></li>
+        <li><a routerLink="contact" routerLinkActive="activeNav">{{ info.navbar.contact }}</a></li>
     </ul>
-</div>
+</nav>
