--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,5 +31,5 @@
 </ul>
 <div class="menu">
     <img src="assets/images/menu.png" alt="menu" (click)="toggleMenu()">
-    <app-sandwich-menu class="sandwich-menu" [class.active]="isMenuOpen" />
+    <app-sandwich-menu class="sandwich-menu" [class.active]="isMenuOpen" [info]="info" />
 </div>
