--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,7 +15,7 @@
   height: 100%;
   object-fit: cover;
   transform: translate(-50%, -50%);
-  z-index: -1;
+  z-index: -2;
 }
 
 button {
@@ -37,6 +37,9 @@ button:hover {
 
 .navbar {
   width: 15%;
+  background-color: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  z-index: 99;
 }
 
 .container {
@@ -53,6 +56,8 @@ button:hover {
     width: 100%;
     height: 64px;
     position: fixed;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: 99;
   }
 
   .container {
