--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,8 +1,8 @@
 :host {
     height: 100vh;
-    backdrop-filter: blur(10px);
     box-shadow: 0 0 7px black;
     position: relative;
+    z-index: 999;
 }
 
 .navbar-brand {
@@ -76,17 +76,21 @@
 }
 
 .sandwich-menu {
-    background-color: rgb(0, 0, 0, 0.7);
-    box-shadow: 0 0 7px black;
+    display: block;
     height: 100vh;
     position: fixed;
     top: 64px;
     width: 0;
     left: 0;
-    z-index: 9;
+    z-index: 999;
     color: white;
     overflow: hidden;
     transition: width 0.2s ease;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.sandwich-menu.active {
+    width: 180px;
 }
 
 /* media queries */
@@ -140,10 +144,5 @@
     .menu {
         display: block;
         margin: 10px;
-    }
-
-    .sandwich-menu.active {
-        position: fixed;
-        width: 180px;
     }
 }
