--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,20 +3,11 @@
   display: flex;
   flex-direction: row;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.048);
+  background: url('../assets/back2.png') no-repeat;
+  background-size: cover;
 
 }
 
-#bg-video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-  z-index: -2;
-}
 
 button {
   padding: 10px 15px;
@@ -35,12 +26,7 @@ button:hover {
   border: 1px solid white;
 }
 
-.navbar {
-  width: 15%;
-  background-color: rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(10px);
-  z-index: 99;
-}
+
 
 .container {
   width: 85%;
