--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,15 +1,27 @@
 :host {
     height: 100vh;
-    box-shadow: 0 0 7px black;
+
     position: relative;
     z-index: 999;
+    padding: 30px 20px;
+}
+
+.container {
+    border: 1px solid transparent;
+    backdrop-filter: blur(10px);
+    border-radius: 30px;
+    width: 80px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
 }
 
 .navbar-brand {
     display: block;
     margin: 10px auto;
-    width: 80%;
+    width: 80px;
     text-align: center;
+    padding: 10px;
+    cursor: pointer;
 }
 
 .navbar-brand span {
@@ -20,10 +32,11 @@
     border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 50%;
     width: 100%;
-    box-shadow: inset 0 0 5px black;
+    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
 }
 
 .navbar-brand p {
+    margin-left: 0;
     margin-top: 10px;
     color: white;
     font-size: 1.5rem;
@@ -45,7 +58,13 @@
     transition: .1s ease-in-out;
 }
 
-.socials {
+.navbar ul li a img {
+    filter: invert(100%);
+    width: 25px;
+    margin: 0 5px;
+}
+
+/* .socials {
     display: flex;
     width: 80%;
     margin: 50px auto 0 auto;
@@ -54,7 +73,7 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-}
+} */
 
 .socials li a img {
     width: 25px;
